@@ -35,7 +35,7 @@ typedef BYTE *STRINGPTR;
 /* This has to go here because reslib requires the above typedefs. */
 #include "reslib.h"
 
-extern BOOLEAN InstallStringTableResType (COUNT string_type, COUNT bin_type);
+extern BOOLEAN InstallStringTableResType (void);
 extern STRING_TABLE LoadStringTableInstance (RESOURCE res);
 extern STRING_TABLE LoadStringTableFile (uio_DirHandle *dir,
 		const char *fileName);
